Profilseite wurd erstellt ist allerdings noch ohne DB Anbindung, Profilbild kann ausgewähöt werden (auch nch ohne DB), Profilseite hat Miran gestaltet aber der kann kein Githb benutzen.

--- a/Datingseite/Pages/TestseitePage1.xaml
+++ b/Datingseite/Pages/TestseitePage1.xaml
@@ -9,6 +9,6 @@
       Title="TestseitePage1">
 
     <Grid>
-        <Button Content="test"></Button>
+        <Image x:Name="imageplace"/>
     </Grid>
 </Page>
