--- a/Datingseite/Pages/Hauptmenu.xaml
+++ b/Datingseite/Pages/Hauptmenu.xaml
@@ -38,7 +38,7 @@
 
         </StackPanel>
 
-        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Margin="0,5,5,0">
+        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Margin="0,40,5,0">
             <TextBlock Text="Eingeloggt als" FontSize="15" Name="textBlockLoggeInAs"/>
         </StackPanel>
 
@@ -58,5 +58,13 @@
                 </DataGrid.Columns>
             </DataGrid>
         </StackPanel>
+
+        <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,0,0">
+            <Button Content="Profil" FontSize="15" Width="100" Click="Button_Click_2"/>
+        </StackPanel>
+
+        
+        
+        
     </Grid>
 </Page>
