--- a/Datingseite/Pages/Tinderseite.xaml
+++ b/Datingseite/Pages/Tinderseite.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Datingseite.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="500"
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="Tinderseite">
 
     <Grid x:Name="theGrid" KeyDown="Grid_KeyDown_1" Focusable="True" Loaded="TheGrid_OnLoaded">
@@ -30,6 +30,7 @@
                     <GradientStop Color="White" Offset="1" />
                 </LinearGradientBrush>
             </Border.Background>
+            <Button Content="Exit" Margin="0,10,748,400" Click="Button_Click"/>
 
         </Border>
 
@@ -37,7 +38,7 @@
 
         <StackPanel/>
         <Label Grid.Column="3" Margin="95,36,101,36" Grid.Row="2" />
-        <Button Name="YesButton" Content="yesButton" Margin="0,48,10,0" Grid.RowSpan="2" Grid.Row="1"/>
-        <Button Name="NoButton" Content="noButton" Margin="4,43,0,5" Grid.RowSpan="2" Grid.Row="1" Grid.Column="5"/>
+        <Button Name="YesButton" Content="yesButton" Margin="0,46,10,0" Grid.RowSpan="2" Grid.Row="1"/>
+        <Button Name="NoButton" Content="noButton" Margin="10,46,0,0" Grid.RowSpan="2" Grid.Row="1" Grid.Column="5"/>
     </Grid>
 </Page>
