--- a/Datingseite/Window1.xaml
+++ b/Datingseite/Window1.xaml
@@ -8,7 +8,8 @@
         Title="Window1" Height="450" Width="800"
         AllowsTransparency="True"
         WindowStyle="None">
-    <Grid>
+    
+    <Grid x:Name="theGrid" KeyDown="Grid_KeyDown_1" Focusable="True" Loaded="TheGrid_OnLoaded">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.4*"/>
             <RowDefinition Height="1*"/>
@@ -22,7 +23,7 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.RowSpan="3" Grid.ColumnSpan="2" RenderTransformOrigin="0.642,0.689">
+        <Border Grid.RowSpan="3" Grid.ColumnSpan="2" RenderTransformOrigin="0.642,0.689" KeyDown="Border_KeyDown">
             <Border.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="IndianRed" Offset="0.4"/>
