--- a/Datingseite/Pages/Tinderseite.xaml
+++ b/Datingseite/Pages/Tinderseite.xaml
@@ -18,12 +18,12 @@
             <ColumnDefinition Width="44*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="53*"/>
-            <RowDefinition Height="232*"/>
-            <RowDefinition Height="144*"/>
-            <RowDefinition Height="71*"/>
+            <RowDefinition Height="48*"/>
+            <RowDefinition Height="209*"/>
+            <RowDefinition Height="129*"/>
+            <RowDefinition Height="64*"/>
         </Grid.RowDefinitions>
-        <Border CornerRadius="10" Grid.RowSpan="4" Grid.ColumnSpan="6">
+        <Border CornerRadius="10" Grid.RowSpan="4" Grid.ColumnSpan="6" HorizontalAlignment="Left" Width="800">
             <Border.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="IndianRed" Offset="0.4"/>
@@ -34,11 +34,44 @@
 
         </Border>
 
-        <Image Margin="81,40,2,2" Grid.Column="1" Grid.ColumnSpan="3" Grid.RowSpan="2" Source="/images/arrowback.png"/>
+
+        <TextBox FontWeight="Light"
+                    Text="Name:"
+                    FontSize="22"
+                    Background="Transparent"
+                    BorderThickness="0,0,0,1"
+                    HorizontalContentAlignment="Left"
+                    x:Name="textboxName"
+                    IsEnabled="False" Grid.Column="3" Margin="30,184,40,109" Grid.Row="1" Grid.RowSpan="2"/>
+
 
         <StackPanel/>
-        <Label Grid.Column="3" Margin="95,36,101,36" Grid.Row="2" />
-        <Button Name="YesButton" Content="yesButton" Margin="0,46,10,0" Grid.RowSpan="2" Grid.Row="1"/>
-        <Button Name="NoButton" Content="noButton" Margin="10,46,0,0" Grid.RowSpan="2" Grid.Row="1" Grid.Column="5"/>
+        <Label Grid.Column="5" Margin="20,35,0,0" Grid.Row="3" RenderTransformOrigin="2.841,0.636" />
+        <Button Name="YesButton" Content="yesButton" Margin="0,46,10,0" Grid.RowSpan="2" Grid.Row="1" Click="YesButton_Click"/>
+        <Button Name="NoButton" Content="noButton" Margin="10,46,0,0" Grid.RowSpan="2" Grid.Row="1" Grid.Column="5" Click="NoButton_Click"/>
+        <TextBox FontWeight="Light"
+            Text="Alter:"
+            FontSize="22"
+            Background="Transparent"
+            BorderThickness="0,0,0,1"
+            HorizontalContentAlignment="Left"
+            x:Name="textboxAge"
+            IsEnabled="False" Grid.Column="3" Margin="30,19,40,64" Grid.Row="2"/>
+        <TextBox FontWeight="Light"
+            Text="Geschlecht:"
+            FontSize="22"
+            Background="Transparent"
+            BorderThickness="0,0,0,1"
+            HorizontalContentAlignment="Left"
+            x:Name="textboxGender"
+            IsEnabled="False" Grid.Column="3" Margin="30,65,40,19" Grid.Row="2"/>
+        <TextBox FontWeight="Light"
+            Text="Beschreibung:"
+            FontSize="22"
+            Background="Transparent"
+            BorderThickness="0,0,0,1"
+            HorizontalContentAlignment="Left"
+            x:Name="textboxDescription"
+            IsEnabled="False" Grid.Column="3" Margin="30,110,40,37" Grid.Row="2" Grid.RowSpan="2"/>
     </Grid>
 </Page>
