Appl Icon hinzugefügt
Ein Taskleisten Icon wurde implementiert

Co-Authored-By: bkglKonnerth <89518056+bkglKonnerth@users.noreply.github.com>

--- a/Datingseite/LoginWindow.xaml
+++ b/Datingseite/LoginWindow.xaml
@@ -8,7 +8,7 @@
         Title="LoginWindow" Height="450" Width="380"
         AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen" Icon="/icon.ico">
     <Window.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
