Bug Fix + Code auslagerung
Beim erstmaligen öffnen wurden die Label nicht geupdatet (Fixed)

Riesen Codeblock wurde ausgelagert. (Ist in GlobalVariabele).

Co-Authored-By: 2kDrNutella <77410255+2kDrNutella@users.noreply.github.com>

--- a/Datingseite/Pages/Tinderseite.xaml
+++ b/Datingseite/Pages/Tinderseite.xaml
@@ -30,7 +30,7 @@
                     <GradientStop Color="White" Offset="1" />
                 </LinearGradientBrush>
             </Border.Background>
-            <Button Content="Exit" Margin="0,10,748,400" Click="Button_Click"/>
+            <Image Margin="212,22,212,223" Name="profilbildbox"/>
 
         </Border>
 
