--- a/Datingseite/Pages/Hauptmenu.xaml
+++ b/Datingseite/Pages/Hauptmenu.xaml
@@ -26,6 +26,8 @@
                     <GradientStop Color="White" Offset="1" />
                 </LinearGradientBrush>
             </Border.Background>
+            
+            <Button Content="Button" Margin="542,354,64,34" Click="Button_Click_3" Visibility="Hidden"/>
         </Border>
 
 
