--- a/Datingseite/Pages/Hauptmenu.xaml
+++ b/Datingseite/Pages/Hauptmenu.xaml
@@ -59,6 +59,18 @@
                     <DataGridTextColumn Binding="{Binding geburtsdatum}" Header="Geburtsdatum" Width="1*" x:Name="gvGeburtsdatum"/>
                 </DataGrid.Columns>
             </DataGrid>
+
+            <TextBox Name="Tinder1" IsEnabled="False" Background="ForestGreen"/>
+            <TextBox Name="Tinder2" IsEnabled="False" Background="ForestGreen"/>
+            <TextBox Name="Tinder3" IsEnabled="False" Background="ForestGreen"/>
+            <TextBox Name="Tinder4" IsEnabled="False" Background="ForestGreen"/>
+            <TextBox Name="Tinder5" IsEnabled="False" Background="ForestGreen"/>
+            <TextBox Name="Tinder6" IsEnabled="False" Background="ForestGreen"/>
+            <TextBox Name="Tinder7" IsEnabled="False" Background="ForestGreen"/>
+            <TextBox Name="Tinder8" IsEnabled="False" Background="ForestGreen"/>
+            <TextBox Name="Tinder9" IsEnabled="False" Background="ForestGreen"/>
+            <TextBox Name="Tinder10" IsEnabled="False" Background="ForestGreen"/>
+
         </StackPanel>
 
         <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,0,0">
