--- a/Datingseite/Pages/Hauptmenu.xaml
+++ b/Datingseite/Pages/Hauptmenu.xaml
@@ -52,33 +52,17 @@
         <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Stretch"  Margin="5,0,5,0">
             <TextBlock Text="Gefundene Partner:" FontSize="20" TextAlignment="Center"/>
 
-            <DataGrid Name="matchesDatagrid" AutoGenerateColumns="False" CanUserAddRows="False" AreRowDetailsFrozen="True">
+            <DataGrid Name="matchesDatagrid" AutoGenerateColumns="False" CanUserAddRows="False" AreRowDetailsFrozen="True" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" CanUserReorderColumns="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding username}" Header="Username" Width="2*" x:Name="gvUsername"/>
                     <DataGridTextColumn Binding="{Binding vorname}" Header="Vorname" Width="1.5*" x:Name="gvVorname"/>
                     <DataGridTextColumn Binding="{Binding geburtsdatum}" Header="Geburtsdatum" Width="1*" x:Name="gvGeburtsdatum"/>
                 </DataGrid.Columns>
             </DataGrid>
-
-            <TextBox Name="Tinder1" IsEnabled="False" Background="ForestGreen"/>
-            <TextBox Name="Tinder2" IsEnabled="False" Background="ForestGreen"/>
-            <TextBox Name="Tinder3" IsEnabled="False" Background="ForestGreen"/>
-            <TextBox Name="Tinder4" IsEnabled="False" Background="ForestGreen"/>
-            <TextBox Name="Tinder5" IsEnabled="False" Background="ForestGreen"/>
-            <TextBox Name="Tinder6" IsEnabled="False" Background="ForestGreen"/>
-            <TextBox Name="Tinder7" IsEnabled="False" Background="ForestGreen"/>
-            <TextBox Name="Tinder8" IsEnabled="False" Background="ForestGreen"/>
-            <TextBox Name="Tinder9" IsEnabled="False" Background="ForestGreen"/>
-            <TextBox Name="Tinder10" IsEnabled="False" Background="ForestGreen"/>
-
         </StackPanel>
 
         <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,0,0">
             <Button Content="Profil" FontSize="15" Width="100" Click="Button_Click_2"/>
         </StackPanel>
-
-
-
-
     </Grid>
 </Page>
